--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "evidence:probe": "tsx scripts/evidenceProbe.ts"
   },
   "dependencies": {
     "firebase": "^11.1.0",
+    "framer-motion": "^12.23.26",
     "next": "^14.2.35",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-globe.gl": "^2.37.0",
+    "three": "^0.182.0",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
   },
@@ -26,6 +30,7 @@
     "eslint-config-next": "^14.2.35",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
