--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-﻿# Environment Variables Template
+# Environment Variables Template
 # Copy this file to .env.local and fill in your actual values
 # NEVER commit .env.local to Git!
 
@@ -14,3 +14,16 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+
+# Serper.dev Search (primary search provider - recommended)
+# Get from: https://serper.dev (free tier available)
+SERPER_API_KEY=your_serper_api_key
+
+# Google Custom Search Engine (alternative search provider)
+# Get from: https://programmablesearchengine.google.com/
+# See GOOGLE_CSE_SETUP.md for detailed setup instructions
+GOOGLE_CSE_CX=your_search_engine_id
+GOOGLE_CSE_API_KEY=your_google_api_key
+
+# Debug mode (set to true to see detailed evidence logs)
+DEBUG_EVIDENCE=false
