--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "evidence:probe": "tsx scripts/evidenceProbe.ts"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "firebase": "^11.1.0",
     "framer-motion": "^12.23.26",
     "next": "^14.2.35",
@@ -17,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-globe.gl": "^2.37.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
