--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
     "framer-motion": "^12.23.26",
+    "lucide-react": "^0.563.0",
     "next": "^14.2.35",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
     "react-globe.gl": "^2.37.0",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "zod": "^3.22.4",
