--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "evidence:probe": "tsx scripts/evidenceProbe.ts"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
-    "firebase-admin": "^13.6.0",
+    "firebase-admin": "^12.7.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.563.0",
-    "next": "^14.2.35",
+    "next": "^16.1.6",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
@@ -31,8 +32,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.23",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.35",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "tsx": "^4.21.0",
